--- a/app/src/main/res/layout/fragment_item_buat_tim.xml
+++ b/app/src/main/res/layout/fragment_item_buat_tim.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/asset_background_list_item"
         android:clipToOutline="true"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -35,6 +36,16 @@
                 android:background="?attr/selectableItemBackground">
 
                 <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/is_sb"
+                    android:maxLines="2"
+                    android:text="Nama Team anda"
+                    android:textColor="#80FFFFFF"
+                    android:textSize="12sp" />
+
+                <TextView
                     android:id="@+id/tvnamatim"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -56,6 +67,16 @@
                         android:layout_height="15dp"
                         android:layout_marginRight="6dp"
                         android:src="@drawable/icon_tim" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:ellipsize="end"
+                        android:fontFamily="@font/is_m"
+                        android:maxLines="2"
+                        android:text="Jumlah Member: "
+                        android:textColor="#80FFFFFF"
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tjumlahorang"
@@ -63,18 +84,33 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ellipsize="end"
-                        android:fontFamily="@font/is_r"
+                        android:fontFamily="@font/is_bold"
                         android:maxLines="2"
                         android:text="3/4"
                         android:textColor="#FFFFFFFF"
                         android:textSize="12sp" />
 
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
                     <ImageView
-                        android:layout_marginLeft="10dp"
                         android:layout_width="13dp"
                         android:layout_height="13dp"
                         android:layout_marginRight="6dp"
                         android:src="@drawable/icon_kalender" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:ellipsize="end"
+                        android:fontFamily="@font/is_m"
+                        android:maxLines="2"
+                        android:text="Tenggat Join: "
+                        android:textColor="#80FFFFFF"
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tvtanggal"
@@ -82,12 +118,11 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ellipsize="end"
-                        android:fontFamily="@font/is_r"
+                        android:fontFamily="@font/is_bold"
                         android:maxLines="2"
                         android:text="22 November 2025"
                         android:textColor="#FFFFFFFF"
                         android:textSize="12sp" />
-
                 </LinearLayout>
 
             </LinearLayout>
@@ -103,17 +138,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
                 android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:fontFamily="@font/is_r"
-                    android:maxLines="2"
-                    android:text="0 Postingan aktif"
-                    android:textColor="#7FFFFFFF"
-                    android:textSize="12sp" />
 
                 <Button
                     android:id="@+id/btnSimpanPostingLomba"
