--- a/app/src/main/res/layout/fragment_item_postinganlomba.xml
+++ b/app/src/main/res/layout/fragment_item_postinganlomba.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#0A1124"
+    android:layout_marginBottom="16dp"
     tools:context=".Home.HomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,6 +31,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
+                android:id="@+id/ivPoster"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -47,7 +49,9 @@
             app:layout_constraintStart_toEndOf="@id/img_poster"
             app:layout_constraintEnd_toEndOf="parent">
 
+            <!-- Tambahkan ID untuk jenis lomba -->
             <TextView
+                android:id="@+id/tvJenis"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="6dp"
@@ -56,7 +60,9 @@
                 android:textSize="12sp"
                 android:fontFamily="@font/is_r" />
 
+            <!-- Tambahkan ID untuk nama lomba -->
             <TextView
+                android:id="@+id/tvNamaLomba"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -69,6 +75,7 @@
 
             <include layout="@layout/badge_kecil" />
 
+            <!-- Tambahkan ID untuk tanggal -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -82,6 +89,7 @@
                     android:src="@drawable/icon_event" />
 
                 <TextView
+                    android:id="@+id/tvTanggal"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -93,6 +101,7 @@
                     android:ellipsize="end" />
             </LinearLayout>
 
+            <!-- Tambahkan ID untuk lokasi -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -106,6 +115,7 @@
                     android:src="@drawable/icon_lokasi_abu" />
 
                 <TextView
+                    android:id="@+id/tvLokasi"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -118,6 +128,8 @@
             </LinearLayout>
 
         </LinearLayout>
+
+        <!-- Update badge status untuk menampilkan status approval -->
         <LinearLayout
             android:id="@+id/badge_container"
             android:layout_width="wrap_content"
@@ -134,16 +146,34 @@
                 android:layout_height="15dp"
                 android:src="@drawable/icon_profile" />
 
+            <!-- Tambahkan ID untuk badge status -->
             <TextView
                 android:id="@+id/badge_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
-                android:text="Individu"
+                android:text="Menunggu"
                 android:textColor="@color/white"
                 android:textSize="9sp"
                 android:fontFamily="@font/is_sb" />
         </LinearLayout>
+
+        <!-- Tambahkan view untuk status approval -->
+        <TextView
+            android:id="@+id/tvStatusApproval"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="Menunggu Konfirmasi"
+            android:textColor="#FFA500"
+            android:textSize="10sp"
+            android:fontFamily="@font/is_sb"
+            android:layout_marginBottom="10dp"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="2dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
