--- a/app/src/main/res/layout/fragment_lostn_found.xml
+++ b/app/src/main/res/layout/fragment_lostn_found.xml
@@ -1,175 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#001136"
-    tools:context=".Home.HomeFragment">
-        <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/asset_background_list_item"
-            android:padding="12dp"
-            android:layout_margin="10dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
+    android:background="#001136">
 
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/profile_coba"
-                    android:contentDescription="Foto profil"/>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_marginStart="10dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Elliot"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
-                        android:textSize="15sp"
-                        android:fontFamily="@font/is_m" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="1 hari lalu"
-                        android:textColor="#858891"
-                        android:textSize="12sp" />
-                </LinearLayout>
-                <Button
-                    android:layout_width="85dp"
-                    android:layout_height="25dp"
-                    android:text="Menemukan"
-                    android:fontFamily="@font/is_r"
-                    android:textColor="@color/white"
-                    android:padding="5dp"
-                    android:textAllCaps="false"
-                    android:textSize="12dp"
-                    android:background="@drawable/custom_button_rounded_corner_putih"/>
-                <ImageButton
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/icon_lainnya"
-                    android:contentDescription="Menu lainnya" />
-            </LinearLayout>
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/gambar_lostandfound"
-                android:textColor="@color/white"
-                android:layout_marginTop="10dp"
-                android:textSize="14sp"
-                android:fontFamily="@font/is_sb"/>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lokasi Ditemukan:"
-            android:textColor="#80FFFFFF"
-            android:textSize="14sp"
-            android:layout_marginTop="10dp"
-            android:drawableStart="@drawable/icon_lokasi"
-            android:drawablePadding="5dp"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Ruang 3.3 JTI"
-            android:textColor="#5E8BFF"
-            android:layout_marginLeft="5dp"
-            android:textSize="14sp"
-            android:layout_marginTop="10dp"/>
-    </LinearLayout>
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewLostFound"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <include
-            android:id="@+id/include_singkat"
-            layout="@layout/fragment_lebihsedikit_lostnfound"
-            android:visibility="visible" />
+        android:layout_height="match_parent"
+        android:padding="8dp" />
 
-        <include
-            android:id="@+id/include_lengkap"
-            layout="@layout/fragment_selengkapnya_lostnfound"
-            android:visibility="gone" />
-    </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp"
-                android:gravity="center_vertical">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical">
-
-                    <ImageView
-                        android:layout_width="18dp"
-                        android:layout_height="18dp"
-                        android:src="@drawable/icon_like"
-                        android:contentDescription="Like" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="2,5rb"
-                        android:textColor="@color/white"
-                        android:textSize="13sp"
-                        android:layout_marginStart="5dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginStart="15dp"
-                    android:gravity="center_vertical">
-
-                    <ImageView
-                        android:layout_width="18dp"
-                        android:layout_height="18dp"
-                        android:src="@drawable/icon_comment"
-                        android:contentDescription="Komentar" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="876"
-                        android:textColor="@color/white"
-                        android:textSize="13sp"
-                        android:layout_marginStart="5dp" />
-                </LinearLayout>
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
-
-                <ImageView
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:src="@drawable/icon_share"
-                    android:contentDescription="Bagikan" />
-            </LinearLayout>
-        </LinearLayout>
-</ScrollView>
+</RelativeLayout>
