--- a/app/src/main/res/layout/layout_add_event.xml
+++ b/app/src/main/res/layout/layout_add_event.xml
@@ -286,14 +286,14 @@
                 android:textColorHint="#66FFFFFF"
                 android:inputType="textCapSentences"/>
 
-            <com.naufal.younifirst.custom.CustomEditText
-                android:id="@+id/et_linkPendaftaran"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/white"
-                android:textColorHint="#66FFFFFF"
-                android:inputType="textCapSentences"/>
+<!--            <com.naufal.younifirst.custom.CustomEditText-->
+<!--                android:id="@+id/et_linkPendaftaran"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="60dp"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textColorHint="#66FFFFFF"-->
+<!--                android:inputType="textCapSentences"/>-->
 
             <TextView
                 android:layout_width="wrap_content"
