--- a/app/src/main/res/layout/layout_pengaturan.xml
+++ b/app/src/main/res/layout/layout_pengaturan.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0A1124">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,6 +49,7 @@
         android:orientation="vertical"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -99,6 +101,7 @@
                 android:src="@drawable/icon_settings"
                 android:contentDescription="Menu lainnya" />
         </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -108,90 +111,60 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+
             <LinearLayout
+                android:id="@+id/layout_postingan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:paddingVertical="10dp"
+                android:padding="16dp"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true">
 
-                android:layout_marginTop="10dp">
+                <!-- Gunakan salah satu icon di bawah ini -->
+
+                <!-- Option 1: Simple white icon -->
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:src="@drawable/icon_pesan"
-                    android:padding="8dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:contentDescription="Kembali" />
-                <LinearLayout
+                    android:contentDescription="Postingan Anda"/>
+
+                <!-- Option 2: Green circle icon -->
+                <!--
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/icon_postingan"
+                    android:contentDescription="Postingan Anda"/>
+                -->
+
+                <!-- Option 3: My posts icon -->
+                <!--
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/icon_my_posts"
+                    android:contentDescription="Postingan Anda"/>
+                -->
+
+                <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Postingan"
-                        android:textColor="@color/white"
-                        android:textSize="16sp"
-                        android:layout_marginLeft="5dp"
-                        android:fontFamily="@font/is_sb" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Postingan, kompetisi, rekrut tim, event"
-                        android:textColor="#ffffff"
-                        android:textSize="14sp"
-                        android:layout_marginLeft="5dp"
-                        android:fontFamily="@font/is_r"/>
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:paddingVertical="10dp"
-                android:layout_marginTop="10dp">
+                    android:text="Postingan Anda"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:layout_marginStart="12dp"
+                    android:fontFamily="@font/is_r"/>
 
                 <ImageView
-                    android:id="@+id/icon_activity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/icon_history"
-                    android:padding="8dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:contentDescription="Kembali" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Aktivitas"
-                        android:textColor="@color/white"
-                        android:textSize="16sp"
-                        android:layout_marginLeft="5dp"
-                        android:fontFamily="@font/is_sb" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Suka dan Komentar"
-                        android:textColor="#ffffff"
-                        android:textSize="14sp"
-                        android:layout_marginLeft="5dp"
-                        android:fontFamily="@font/is_r"/>
-                </LinearLayout>
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/panah_kanan"
+                    android:contentDescription="Panah"/>
             </LinearLayout>
 
             <LinearLayout
@@ -373,7 +346,6 @@
                         android:fontFamily="@font/is_r"/>
                 </LinearLayout>
             </LinearLayout>
-
 
         </LinearLayout>
     </LinearLayout>
