--- a/app/src/main/res/layout/layout_rekrut_tim.xml
+++ b/app/src/main/res/layout/layout_rekrut_tim.xml
@@ -124,33 +124,48 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="20dp"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/header_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <LinearLayout
-            android:id="@+id/containerPostinganLomba"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <include
-                android:id="@+id/includeTimAnda"
-                layout="@layout/fragment_item_buat_tim" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/emptyPostinganText"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Anda belum memiliki tim. Buat tim pertama Anda dan mulai rekrut tim Anda di sini!!"
-            android:textColor="#50ffffff"
-            android:textAlignment="center" />
+            android:fillViewport="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:id="@+id/containerPostinganLomba"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="30dp">
+
+                    <include
+                        android:id="@+id/includeTimAnda"
+                        layout="@layout/fragment_item_buat_tim" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/emptyPostinganText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Anda belum memiliki tim. Buat tim pertama Anda dan mulai rekrut tim Anda di sini!!"
+                    android:textColor="#50ffffff"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
+
+        </ScrollView>
+
     </LinearLayout>
 
     <ImageButton
